--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,8 +14,17 @@ server:
 
 
 spring:
+  datasource:
+    username: UAT
+    password: uat
+    url: jdbc:oracle:thin:@172.17.230.219:1521/raystestdb
+    driver-class-name: oracle.jdbc.driver.OracleDriver
   config:
     import: file:env.properties
   application: cbs-customer-registration-service
   profiles:
     active: test
+  jpa:
+    hibernate:
+      naming:
+        physical-strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
