--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
             <groupId>com.microsoft.sqlserver</groupId>
             <artifactId>mssql-jdbc</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.4.4</version> <!-- Use the latest version -->
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
